fixed misalign ui in company

--- a/assets/css/company_jobpost.css
+++ b/assets/css/company_jobpost.css
@@ -8,13 +8,9 @@ body
 }
 
 .main-container{
-    margin-left: 0;
     width: 100%;
     padding-top: 100px;
     overflow-y: hidden;
-    background-color: pink;
-
-    
 }
 
 /*loader*/
@@ -65,7 +61,10 @@ body
     transform: rotate(360deg);
   }
   }
+.main-row{
 
+    margin: 50px;
+}
 .col-1{
     width: 100%;
     position: relative;
@@ -96,8 +95,7 @@ body
     padding: 10px;
     margin: 0;
     border-radius: 11px;
-    box-shadow: 0px 4px 4px 0px #00000040 inset;
-    box-shadow: 0px 4px 4px 0px #00000040;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset, 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .col-2-content .desc-col-1{
     flex: 1;
