--- a/company/job_posting.css
+++ b/company/job_posting.css
@@ -2,23 +2,18 @@
     margin: 0;
     padding: 0;
 }
-body
-{
-    margin: 0;
-}
-
 .main-container{
-    margin-left: 0;
-    width: 100%;
-    padding-top: 150px;
-    overflow-y: hidden;
+    margin-top: 70px;
+    height: 78vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     background-color: white;
     padding-bottom: 100px;
     
 }
 
 .wrapper{
-    height: 89vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -142,11 +137,15 @@ button{
     background: #555; 
   }
 
-@media only screen and (max-width: 880px) {
+@media only screen and (max-width: 880px) and (max-height: 1000px){
     .field-space{
         margin-left: 0;
     }
     .form-step{
         width: 80%;
+        overflow-y: auto;
+    }
+    .wrapper{
+        height: 120%;
     }
   }
